vlib/v/parser/tests/interface_duplicate_method.out
vlib/v/parser/tests/interface_duplicate_method.vv:7:12: error: duplicate method `foo`
    5 | // duplicate normal method definitions on interface
    6 | fn (a Abc) foo() {}
    7 | fn (a Abc) foo() {}
      |            ~~~
