vlib/v/parser/tests/interface_duplicate_method.vv
interface Abc {}

// duplicate normal method definitions on interface
fn (a Abc) foo() {}
fn (a Abc) foo() {}